# tiabt_zephyr

./: README.md  west.yml
app/: CMakeLists.txt  plot.py  prj.conf
app/boards/: nucleo_wb55rg.overlay
app/dts/bindings/: power-switch.yaml
app/src/: bt.c  btmisc.c  btmisc.h  dpot.c  dpot.h  egadc.c  egadc.h  gatt_cpf.h  main.c  mybt.c  mybt.h  mydefs.c  mydefs.h  mynotify.c  mysrv.c  mysrv.h  myuuids.c  myuuids.h  printer.c  printer.h  srv2.c  srv3.c  srv3.h  timecounter.c
